updated Readme file

--- a/src/Spp/Spp.Application.Api/appsettings.json
+++ b/src/Spp/Spp.Application.Api/appsettings.json
@@ -1,36 +1,36 @@
 {
-  "DbTenants": {
-    "ActiveTenant": "Spp",
-    "Spp": {
-      "SppDbConnection": "[YOUR DATABASE CONNECTION STRING]"
-    },
-    "LocalDb": {
-      "SppDbConnection": "[YOUR DATABASE CONNECTION STRING]"
-    }
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  },
-  "AzureAd": {
-    "ClientId": "[YOUR APPLICATION ID from http://apps.dev.microsoft.com/]",
-    "AadInstance": "https://login.microsoftonline.com/{0}",
-    "Tenant": "[YOUR TENANT ID]",
-    "IsMultiTenant": "true"
-  },
-  "Swagger": {
-    "Version": "v1",
-    "Title": "{0} Sports Performance Platform API",
-    "Description": "Sports Performance Platform Web API by Microsoft",
-    "TermsOfService": "Contract",
-    "Copyright": "Copyright (c) Microsoft Corporation. All rights reserved.",
-    "License": {
-      "Name": "Licensed under the MIT license",
-      "File": "https://sppdata.blob.core.windows.net/content/LICENSE?sr=b\u0026sv=2015-12-11\u0026st=2017-10-30T23%3A48%3A48Z\u0026se=2117-10-31T00%3A48%3A00Z\u0026sp=r\u0026spr=https\u0026sig=O3lDV%2FCXCt14u0QSlWfx9w1BVfAU46WN2jLnHHkwNNk%3D"
-    }
-  }
+    "DbTenants":  {
+                      "ActiveTenant":  "Spp",
+                      "Spp":  {
+                                  "SppDbConnection":  "Server=tcp:spp-sqlserver-d7zmpmqjmjctw.database.windows.net,1433;Initial Catalog=spp-dbv2;Persist Security Info=False;User ID=sppadmin;Password=WSXzaq123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+                              },
+                      "LocalDb":  {
+                                      "SppDbConnection":  "[YOUR DATABASE CONNECTION STRING]"
+                                  }
+                  },
+    "Logging":  {
+                    "IncludeScopes":  false,
+                    "LogLevel":  {
+                                     "Default":  "Debug",
+                                     "System":  "Information",
+                                     "Microsoft":  "Information"
+                                 }
+                },
+    "AzureAd":  {
+                    "ClientId":  "[YOUR APPLICATION ID from http://apps.dev.microsoft.com/]",
+                    "AadInstance":  "https://login.microsoftonline.com/{0}",
+                    "Tenant":  "[YOUR TENANT ID]",
+                    "IsMultiTenant":  "true"
+                },
+    "Swagger":  {
+                    "Version":  "v1",
+                    "Title":  "{0} Sports Performance Platform API",
+                    "Description":  "Sports Performance Platform Web API by Microsoft",
+                    "TermsOfService":  "Contract",
+                    "Copyright":  "Copyright (c) Microsoft Corporation. All rights reserved.",
+                    "License":  {
+                                    "Name":  "Licensed under the MIT license",
+                                    "File":  "https://sppdata.blob.core.windows.net/content/LICENSE?sr=b\u0026sv=2015-12-11\u0026st=2017-10-30T23%3A48%3A48Z\u0026se=2117-10-31T00%3A48%3A00Z\u0026sp=r\u0026spr=https\u0026sig=O3lDV%2FCXCt14u0QSlWfx9w1BVfAU46WN2jLnHHkwNNk%3D"
+                                }
+                }
 }
