Set local DB connection string

--- a/src/Spp/Spp.Application.Api/appsettings.json
+++ b/src/Spp/Spp.Application.Api/appsettings.json
@@ -2,7 +2,8 @@
   "DbTenants": {
     "ActiveTenant": "Spp",
     "Spp": {
-      "SppDbConnection": "Server=tcp:spp-sqlserver-wusv6izgzo32m.database.windows.net,1433;Initial Catalog=spp-dbv2;Persist Security Info=False;User ID=sppadmin;Password=Chongchong750=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      //"SppDbConnection": "Server=tcp:spp-sqlserver-wusv6izgzo32m.database.windows.net,1433;Initial Catalog=spp-dbv2;Persist Security Info=False;User ID=sppadmin;Password=Chongchong750=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      "SppDbConnection": "Data Source=localhost;Initial Catalog=spp-dbv2-local;Integrated Security=True"
     },
     "LocalDb": {
       "SppDbConnection": "[YOUR DATABASE CONNECTION STRING]"
