--- a/src/Spp/Spp.Application.Api/appsettings.json
+++ b/src/Spp/Spp.Application.Api/appsettings.json
@@ -1,9 +1,9 @@
 {
 	"DbTenants": {
-		"ActiveTenant": "Spp",
-		"Spp": {
-			"SppDbConnection": "[YOUR DATABASE CONNECTION STRING]"
-		},
+		"ActiveTenant": "Seahawks",
+			"Seahawks": {
+				"SppDbConnection": "Server=tcp:sppdbwestus.database.windows.net,1433;Initial Catalog=SPPDb.Seahawks;Persist Security Info=False;User ID=sppadmin;Password=WSXzaq123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+			},
 		"LocalDb": {
 			"SppDbConnection": "[YOUR DATABASE CONNECTION STRING]"
 		}
@@ -17,10 +17,10 @@
 		}
 	},
 	"AzureAd": {
-		"ClientId": "[YOUR APPLICATION ID from http://apps.dev.microsoft.com/]",
+		"ClientId": "436b73b7-8f59-45e7-9449-580fb9a5d90d",
 		"AadInstance": "https://login.microsoftonline.com/{0}",
-		"Tenant": "[YOUR TENANT ID]",
-		"IsMultiTenant": "true"
+		"Tenant": "0802107c-ed17-4b41-9f91-96250f0b54d4",
+		"IsMultiTenant": "false"
 	},
 	"Swagger": {
 		"Version": "v1",
